--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nathan/sistema_login",
+  "name": "nathan/blog_simples",
   "require": {
     "nikic/fast-route": "^1.3",
     "php-di/php-di": "^7.1",
@@ -8,7 +8,7 @@
     "league/plates": "^3.6",
     "predis/predis": "^3.2",
     "phpmailer/phpmailer": "^6.10",
-    "ramsey/uuid": "^4.9"
+    "robinvdvleuten/ulid": "^5.0"
   },
   "require-dev": {
     "symfony/var-dumper": "^7.3"
