--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,23 @@
 services:
   nginx:
     image: nginx:1.27-alpine
-    container_name: sistema_login_nginx
+    container_name: blog_simples_nginx
     restart: unless-stopped
     ports:
       - "${NGINX_PORT}:80"
     volumes:
       - ./public:/var/www/html/public
+      - ./uploads:/var/www/html/uploads
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
     networks:
-      - app_net
+      - blog_simples_net
 
   php:
     build:
       context: ./docker/php
-    container_name: sistema_login_php_fpm
+    container_name: blog_simples_php_fpm
     restart: unless-stopped
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -24,11 +25,11 @@ services:
       - ./:/var/www/html
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
-      - app_net
+      - blog_simples_net
 
   postgres:
     image: postgres:16-alpine
-    container_name: sistema_login_postgres
+    container_name: blog_simples_postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_DATABASE}
@@ -39,21 +40,21 @@ services:
     ports:
       - "${DB_PORT}:5432"
     networks:
-      - app_net
+      - blog_simples_net
 
   redis:
     image: redis:7.2-alpine
-    container_name: sistema_login_redis
+    container_name: blog_simples_redis
     restart: unless-stopped
     ports:
       - "${REDIS_PORT}:6379"
     networks:
-      - app_net
+      - blog_simples_net
 
 volumes:
   postgres_data:
     driver: local
 
 networks:
-  app_net:
+  blog_simples_net:
     driver: bridge
